[project]
name = "samplers"
version = "0.1.0"
description = "Framework for posterior sampling algorithms."
readme = "README.md"
authors = [
    {name = "Thomas Hirtz"},
    {name = "Badr Moufad"},
]
requires-python = ">=3.12"
dependencies = [
  "torch",
]

[tool.black]
line-length = 100
language-version = "py312"

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
